--- a/src/app/console/header-panel/header-panel.component.html
+++ b/src/app/console/header-panel/header-panel.component.html
@@ -37,7 +37,7 @@
                 </a>
             <div class="dropdown-divider"></div>
             <a (click)="changePassword()" class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                <i class="fa fa-sign-out fa-sm fa-fw mr-2 text-gray-400" aria-hidden="true"></i>
+                <i class="fa fa-unlock-alt fa-sm fa-fw mr-2 text-gray-400" aria-hidden="true"></i>
                 Change Password
             </a>
                 <div class="dropdown-divider"></div>
