--- a/src/app/work-space/work-space-sub-menu/work-space-sub-menu.component.html
+++ b/src/app/work-space/work-space-sub-menu/work-space-sub-menu.component.html
@@ -16,7 +16,7 @@
             </a>
         </li>
         
-        <li>
+        <li style="display: none;">
             <a style="cursor: pointer;"   (click)="menuClick('documents')"  [class.active]="environmentService.getWSSubMenu() =='documents'">
                 <img src="assets/images/menu-icons/sub-menu2.png">
             </a>
