--- a/src/app/console/sign-up-invite-team/sign-up-invite-team.component.html
+++ b/src/app/console/sign-up-invite-team/sign-up-invite-team.component.html
@@ -17,7 +17,7 @@
                             <div *ngFor="let emailId of emailIds.controls; let i = index" [formGroupName]="i">
                              
                               
-                              <div>
+                              <div style="padding-bottom: 5px;">
                                 <input type="text" class="txt-outline w-100" id="Email" formControlName="emailId"
                                   placeholder="Enter email here"
                                   [ngClass]="{ 'is-invalid': submitted && emailIds.controls[i].get('emailId').errors }">
