--- a/src/app/subscription/manage-subscription/manage-subscription.component.html
+++ b/src/app/subscription/manage-subscription/manage-subscription.component.html
@@ -62,6 +62,7 @@
           </div>
         </div>
         <div class="col-sm-1"></div>
+        <!--
         <div class="col-sm-3">
           <div class="row">
             <div class="col-sm-12">
@@ -89,11 +90,13 @@
                 <div class="d-flex justify-content-center">
                   <button class="btn button-blue">Contact Support</button>
                 </div>
-                <!--<a class="font-red ft-bold">Close my account</a>-->
+                <a class="font-red ft-bold">Close my account</a>
               </div>
             </div>
           </div>
         </div>
+
+        -->
       </div>
       <div class="estimate-table mb-4">
         <div class="row justify-content-between mr-4 ml-2 mt-5">
