--- a/src/app/work-space/work-space-development-document/work-space-development-document.component.html
+++ b/src/app/work-space/work-space-development-document/work-space-development-document.component.html
@@ -69,8 +69,11 @@
                                 <!-- {{f1.isFileInput.Value}} -->
                                 <!-- <input type="file" class="btn btn-outline-purple" /> -->
                             </div>
+                            <div class="col-sm-4">
+                              <button type="submit" class="btn button-save ml-3" >Save</button>
                           </div>
-
+                          </div>
+                          <!--
                           <div class="row pb-10">
                             <div class="col-sm-3">
                                 </div>                          
@@ -78,6 +81,7 @@
                               <button  type="submit" class="btn button-save" >Save</button>
                           </div>
                     </div>
+                    -->
         </form>
     <table *ngIf="!!workSpaceDDLists.length" id="example" class="table">
         <thead>
@@ -111,7 +115,7 @@
       
       <div class="col-sm-12 pr-0 processflow_pt_20">
         <div class="form-group">
-          <label class="control-label" for="cname">Review Comments</label>
+          <div class="page-sub-heading section-spacing">Review Comments</div>
           <textarea formControlName="reviewComment" class="form-control rounded-0 bg-white" id="reviewComment" rows="3"
           [ngClass]=" { 'is-invalid' : submitted && f1.reviewComment.errors }"
           ></textarea>
@@ -189,7 +193,7 @@
   
     <div [ngClass]="{'processflow_pt_20': commonService.getRole() !='idea-owner'}"
       class="page-sub-heading section-spacing">Comments Received</div>
-    <table id="example" class="table">
+    <table id="example" class="table table-custom">
       <thead>
         <tr>
           <th>Edit</th>
@@ -213,9 +217,10 @@
           <td><span class="badge-reviewer"><img src="assets/images/review.png"> {{commentsReceiveddtl.enteredByName}}</span>
           </td>
           <td>{{commentsReceiveddtl.reviewComment}}</td>
-          <td *ngIf="commonService.getRole() =='idea-owner'"><span class="badge" *ngIf="commentsReceiveddtl.actionStatus !='Pending'"
+          <td *ngIf="commonService.getRole() =='idea-owner'">
+            <span class="badge" 
               [ngClass]="{'badge-accepted': commentsReceiveddtl.actionStatus == 'Accepted'}">Accepted</span></td>
-          <td *ngIf="commonService.getRole() =='idea-owner'"><span class="badge" *ngIf="commentsReceiveddtl.actionStatus !='Pending'" [ngClass]="{'badge-rejected action_status_rejected': commentsReceiveddtl.actionStatus == 'Rejected'}">Reject</span>
+          <td *ngIf="commonService.getRole() =='idea-owner'"><span class="badge"  [ngClass]="{'badge-rejected action_status_rejected': commentsReceiveddtl.actionStatus == 'Rejected'}">Reject</span>
           </td>
           <td *ngIf="commonService.getRole() =='idea-owner'">{{commentsReceiveddtl.assignedToUserName}}</td>
           <td class="badge-status"
