--- a/src/app/work-space/work-space-process-flow/work-space-process-flow.component.html
+++ b/src/app/work-space/work-space-process-flow/work-space-process-flow.component.html
@@ -91,7 +91,7 @@
             <div class="txt-lable">Document Name</div>
           </div>
           <div class="col-sm-4">
-            <input type="text" disabled [value]="documentName" class="txt-outline w-100" id="documentName">
+            <input style="background: #F5F6F8;" type="text" disabled [value]="documentName" class="txt-outline w-100 " id="documentName">
 
           </div>
         </div>
@@ -101,7 +101,7 @@
             <div class="txt-lable">Document Description</div>
           </div>
           <div class="col-sm-9">
-            <textarea disabled [value]="documentDesc" class="txt-outline w-100" id="documentDesc"></textarea>
+            <textarea style="background: #F5F6F8;" disabled [value]="documentDesc" class="txt-outline w-100" id="documentDesc"></textarea>
 
           </div>
         </div>
@@ -125,10 +125,10 @@
       <form class="form-horizontal" [formGroup]="formGroup">
         <div class="row" *ngIf="commonService.getRole() !='developer'">
 
-          <div class="col-sm-10 pr-0 processflow_pt_20">
+          <div class="col-sm-12 pr-0 processflow_pt_20">
             <div class="form-group">
 
-              <label class="control-label width-125 " for="cname">Review Comments</label>
+              <div class="page-sub-heading section-spacing">Review Comments</div>
               <textarea formControlName="reviewComment" class="form-control rounded-0 bg-white" id="reviewComment"
                 rows="3" [ngClass]=" { 'is-invalid' : submitted && f1.reviewComment.errors }"></textarea>
               <div *ngIf="submitted && f1.reviewComment.errors" class="invalid-feedback">
@@ -231,11 +231,12 @@
                 {{commentsReceiveddtl.enteredByName}}</span>
             </td>
             <td>{{commentsReceiveddtl.reviewComment}}</td>
+            <!--*ngIf="commentsReceiveddtl.actionStatus =='Pending'"-->
             <td *ngIf="commonService.getRole() =='idea-owner'"><span class="badge"
-                *ngIf="commentsReceiveddtl.actionStatus !='Pending'"
+                
                 [ngClass]="{'badge-accepted': commentsReceiveddtl.actionStatus == 'Accepted'}">Accepted</span></td>
             <td *ngIf="commonService.getRole() =='idea-owner'"><span class="badge"
-                *ngIf="commentsReceiveddtl.actionStatus !='Pending'"
+                
                 [ngClass]="{'badge-rejected action_status_rejected': commentsReceiveddtl.actionStatus == 'Rejected'}">Reject</span>
             </td>
             <td *ngIf="commonService.getRole() =='idea-owner'">{{commentsReceiveddtl.assignedToUserName}}</td>
