--- a/src/app/work-space/work-space-prototype/work-space-prototype.component.html
+++ b/src/app/work-space/work-space-prototype/work-space-prototype.component.html
@@ -24,7 +24,7 @@
           <div *ngIf="commonService.getRole() !='developer'" class="row pt-4">
   
             <div class="col-sm-12">
-              <label class="control-label" for="cname">Review Comments</label>
+              <div class="page-sub-heading section-spacing">Review Comments</div>
               <textarea formControlName="reviewComment" class="form-control rounded-0 bg-white" id="reviewComment"
                 rows="3" [ngClass]=" { 'is-invalid' : submitted && f1.reviewComment.errors }"></textarea>
               <div *ngIf="submitted && f1.reviewComment.errors" class="invalid-feedback">
@@ -100,7 +100,7 @@
         </div>
         <div [ngClass]="{'wireframe_pt_20': commonService.getRole() !='idea-owner'}"
           class="page-sub-heading section-spacing">Comments Received</div>
-        <table id="example" class="table">
+        <table id="example" class="table table-custom">
           <thead>
             <tr>
               <th>Edit</th>
@@ -127,10 +127,8 @@
               </td>
               <td>{{commentsReceiveddtl.reviewComment}}</td>
               <td *ngIf="commonService.getRole() =='idea-owner'"><span class="badge"
-                  *ngIf="commentsReceiveddtl.actionStatus !='Pending'"
                   [ngClass]="{'badge-accepted': commentsReceiveddtl.actionStatus == 'Accepted'}">Accepted</span></td>
               <td *ngIf="commonService.getRole() =='idea-owner'"><span class="badge"
-                  *ngIf="commentsReceiveddtl.actionStatus !='Pending'"
                   [ngClass]="{'badge-rejected action_status_rejected': commentsReceiveddtl.actionStatus == 'Rejected'}">Reject</span>
               </td>
               <td *ngIf="commonService.getRole() =='idea-owner'">{{commentsReceiveddtl.assignedToUserName}}</td>
