--- a/src/app/subscription/make-payment/make-payment.component.html
+++ b/src/app/subscription/make-payment/make-payment.component.html
@@ -27,7 +27,7 @@
                                         </label>
                                     </div>
                                     <div class="width-50 align-right mr-3">
-                                        <img style="cursor: pointer;" (click)="paypal()" src="assets/images/paypal.png">
+                                        <img src="assets/images/paypal.png">
                                     </div>
                                 </div>
         
