--- a/src/app/work-space/work-space-milestones/work-space-milestones.component.html
+++ b/src/app/work-space/work-space-milestones/work-space-milestones.component.html
@@ -31,17 +31,23 @@
                             <p class="ft-10">Planned End Date<sup>*</sup></p>
                             <input [disabled]="milestone.statusCode == 'Completed'" (change)="onChangePlanEndDate($event,milestone)" type="date" [(ngModel)]="milestone.plannedEndDate" class="txt-outline w-100">
                         </div>
-                        <div *ngIf="milestone.statusCode != 'Completed'"  class="col-sm-2">
+                        <div class="col-sm-2">
+                            <p class="pb-25"></p>
+                            <p class="ft-10">Status</p>
+                            <input style="background: #F5F6F8;" readonly type="text" [value]="milestone.statusCode" class="txt-outline w-100">
+                        </div>
+                        <div class="col-sm-2">
                           <p class="pb-25"></p>
-                          <p class="ft-10">Status<sup>*</sup></p>
+                          <p class="ft-10">Change Status<sup>*</sup></p>
                           <select  [disabled]="milestone.statusCode == 'Completed'" class="txt-outline" id="selectOptionid" (change)="onChangeMilestoneStatus(milestone,$event)">
                               <option value="null" id="null"></option>
                               <option value="In-Progress" id="In-Progress">In-Progress </option>
                               <option value="Completed" id="Completed">Completed </option>
                           </select>
                       </div>
-                      <div *ngIf="milestone.statusCode != 'Completed'"  class="col-sm-1">
-                          <div (click)="complete(milestone)" class="btn button-save mt-47 pull-left">Save</div>
+                      <div class="col-sm-1">
+                          <div *ngIf="milestone.statusCode !='Completed'" (click)="complete(milestone)" class="btn button-save mt-47 pull-left">Save</div>
+                          <div  *ngIf="milestone.statusCode =='Completed'" disabled class="btn btn-secondary mt-47 pull-left">Save</div>
                       </div>
                       <!--
                         <div class="col-sm-3">
