--- a/src/app/work-space/work-space-team/work-space-team.component.html
+++ b/src/app/work-space/work-space-team/work-space-team.component.html
@@ -28,7 +28,7 @@
                 </div>
                 -->
                 <div class="col-sm-2">
-                  <label class="ft-18">Access</label>
+                  <label class="ft-18">Access Rights</label>
                 </div>
                 <div class="col-sm-2">
                   <label class="ft-18">Status</label>
