--- a/src/app/work-space/work-space-wireframe/work-space-wireframe.component.html
+++ b/src/app/work-space/work-space-wireframe/work-space-wireframe.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row mt-40">
       <div class="col-sm-12">
-        <div class="iframe-container">
+        <div class="iframe-container" style="border: 1px solid #7C4791;">
         <iframe width="100%" height="500" id='iframe' [src]="iframeUrl"  frameborder="0"></iframe>
       </div>
       </div>
