--- a/src/app/subscription/manage-subscription/manage-subscription.component.html
+++ b/src/app/subscription/manage-subscription/manage-subscription.component.html
@@ -7,7 +7,7 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-sm-12">
-              <h2 class="ft-16 ft-light-gray pb-10">Plan Details</h2>
+              <h2 class="page-sub-heading">Plan Details</h2>
             </div>
           </div>
           <div class="plan-box">
@@ -41,7 +41,7 @@
           </div>
           <div class="row mt-22">
             <div class="col-sm-12">
-              <h2 class="ft-16 ft-light-gray pb-3">Current Users</h2>
+              <h2 class="page-sub-heading">Current Users</h2>
             </div>
           </div>
           <div class="plan-box">
@@ -100,7 +100,7 @@
       </div>
       <div class="estimate-table mb-4">
         <div class="row justify-content-between mr-4 ml-2 mt-5">
-          <h2 class="ft-16 ft-light-gray">Manager Users</h2>
+          <h2 class="page-sub-heading">Manage Users</h2>
           <button class="btn btn-outline mr10px" (click)="inviteMember()">Invite Member</button>
         </div>
 
