--- a/src/app/work-space/work-space-summary/work-space-summary.component.html
+++ b/src/app/work-space/work-space-summary/work-space-summary.component.html
@@ -98,7 +98,7 @@
 
                     <div class="col-sm-3 milestons-list pl-0 mt-5">
                         
-                        <div (click)="viewMilestone('milestones')"  style="text-decoration: underline;cursor: pointer;" class="page-sub-heading">Milestone
+                        <div (click)="viewMilestone('milestones')"  style="cursor: pointer;" class="page-sub-heading">Milestone
                             <span>
                                 <i (click)="viewMilestone('milestones')" class="fa fa-link fa-sm fa-fw mr-2 text-gray-400" style="font-size: 1.1em; cursor: pointer;color: #72308B;" aria-hidden="true"></i>
                                <!-- <div (click)="viewMilestone('milestones')" class="btn button-save ml-10">View</div>-->
