--- a/src/app/console/login/login.component.html
+++ b/src/app/console/login/login.component.html
@@ -3,7 +3,7 @@
 </nav>
 <main>
   <div class="container-fluid">
-    <div class="heading"><span>Log In </span>to your account</div>
+    <div class="heading"><span>Login</span> to your account</div>
     <form autocomplete="off" [formGroup]="loginForm" (ngSubmit)="onSubmit()" id="Login">
       <div class="row">
         <div class="col-sm-4"></div>
@@ -41,8 +41,8 @@
           </div>
           <div class="row">
             <div class="col-sm-3"></div>
-            <div class="col-sm-7"><button class="btn button-save mt-10 w100">Log In</button></div>
-          </div>
+            <div class="col-sm-7"><button class="btn button-save mt-10 w100">Login</button></div>
+          </div> 
           <!--
           <div class="row mt-30">
             <div class="col-sm-4">
